--- a/docs/.cvsignore
+++ b/docs/.cvsignore
@@ -20,8 +20,12 @@ aws-ldap-client.ads.texi
 aws-log.ads.texi
 aws-messages.ads.texi
 aws-mime.ads.texi
+aws-net-buffered.ads.texi
+aws-net-log-callbacks.ads.texi
+aws-net-log.ads.texi
 aws-net-ssl-certificate.ads.texi
 aws-net-ssl.ads.texi
+aws-net.ads.texi
 aws-parameters.ads.texi
 aws-pop.ads.texi
 aws-resources-embedded.ads.texi
