(APIFILES): add aws-net.ads.texi aws-net-buffered.ads.texi  aws-net-log.ads.texi aws-net-log-callbacks.ads.texi

--- a/docs/makefile
+++ b/docs/makefile
@@ -29,6 +29,10 @@ APIFILES = ../src/aws.ads.texi \
 	../src/aws-log.ads.texi \
 	../src/aws-messages.ads.texi \
 	../src/aws-mime.ads.texi \
+	../src/aws-net.ads.texi \
+	../src/aws-net-buffered.ads.texi \
+	../src/aws-net-log.ads.texi \
+	../src/aws-net-log-callbacks.ads.texi \
 	../src/aws-net-ssl.ads.texi \
 	../src/aws-net-ssl-certificate.ads.texi \
 	../src/aws-parameters.ads.texi \
