Add note about ADA_PROJECT_PATH.

--- a/makefile.conf
+++ b/makefile.conf
@@ -6,6 +6,8 @@
 #
 # IMPORTANT: each time you change the definitions here make sure you run
 #            $ make setup
+#
+# You also need to set ADA_PROJECT_PATH to point to <aws_root>/.build/projects
 
 ##############################################################################
 # AWS will be installed under $(INSTALL)/AWS. Update this variable to point to
@@ -24,7 +26,7 @@ INSTALL	 = $(HOME)
 # used to create a WSDL document from an Ada spec. ASIS must point to the
 # asis sources. Note that you also need to activate XMLADA above.
 #
-#ASIS	 = /opt/gnatpro/5.01a/lib/asis
+#ASIS	 = c:/opt/gnatpro/5.02a1/lib/asis
 
 ##############################################################################
 # Adasockets, optional. AWS use GNAT.Sockets as the default socket package. If
