($(WSDL2AWS_TESTS)): Do not fail even if we have an error when  calling $(WSDL2AWS) as this is expected for those tests. Do not  grep the output, this is not needed with new wsdl2aws error handling.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -181,7 +181,7 @@ $(WSDL_ATESTS): force
 
 $(WSDL2AWS_TESTS): force
 	echo "Running  " $@
-	$(WSDL2AWS) -q -f -doc $@.wsdl | grep Message > $@.res
+	-$(WSDL2AWS) -q -f -doc $@.wsdl > $@.res
 	-diff -c -w $@.out $@.res 1>> alldifs 2>> alldifs
 
 $(ASIS_TESTS): force
