(WSDL_TESTS): Add anytype.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -47,7 +47,7 @@ XMLADA_SRC     = ${subst \,/,${dir $(XMLADA_UNICODE)}}
 
 OTH_TESTS     := $(OTH_TESTS) check_mem
 WSDL_TESTS     = test_wsdl test_wsdl2 test_wsdl4 \
-	interoplab_main1 googlesearch datafeed_service
+	interoplab_main1 googlesearch datafeed_service anytype
 WSDL_ATESTS    = test_wsdl3 test_wsdl5
 WSDL2AWS_TESTS = wsdl_parse_1 wsdl_parse_2 wsdl_parse_3	wsdl_parse_4
 endif
