--- a/demos/.cvsignore
+++ b/demos/.cvsignore
@@ -84,6 +84,15 @@ soap_cvs
 soap_server
 soap_server_disp
 soap_svs
+soapinterop-org-xsd-arrayoffloat_pkg.ads
+soapinterop-org-xsd-arrayofint_pkg.ads
+soapinterop-org-xsd-arrayofsoapstruct_pkg.ads
+soapinterop-org-xsd-arrayofstring_pkg.ads
+soapinterop-org-xsd-soapstruct_pkg.adb
+soapinterop-org-xsd-soapstruct_pkg.ads
+soapinterop-org-xsd.ads
+soapinterop-org.ads
+soapinterop.ads
 split
 test_jabber
 test_ldap
