--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -275,6 +275,20 @@ dummy
 dummy.res
 dummy.tmp
 eres.res
+example-com-stockquote-schema-array_of_float_type_pkg.ads
+example-com-stockquote-schema-arrayoffloat_type_pkg.ads
+example-com-stockquote-schema-get_last_trade_price_result_pkg.adb
+example-com-stockquote-schema-get_last_trade_price_result_pkg.ads
+example-com-stockquote-schema-getlasttradeprice_result_pkg.adb
+example-com-stockquote-schema-getlasttradeprice_result_pkg.ads
+example-com-stockquote-schema-time_period_type_pkg.adb
+example-com-stockquote-schema-time_period_type_pkg.ads
+example-com-stockquote-schema-timeperiod_type_pkg.adb
+example-com-stockquote-schema-timeperiod_type_pkg.ads
+example-com-stockquote-schema.ads
+example-com-stockquote.ads
+example-com.ads
+example.ads
 file
 file.res
 file.tmp
@@ -411,6 +425,15 @@ soap4.res
 soap5.res
 soap6.res
 soap7.res
+soapinterop-org-xsd-arrayoffloat_type_pkg.ads
+soapinterop-org-xsd-arrayofint_type_pkg.ads
+soapinterop-org-xsd-arrayofsoapstruct_type_pkg.ads
+soapinterop-org-xsd-arrayofstring_type_pkg.ads
+soapinterop-org-xsd-soapstruct_type_pkg.adb
+soapinterop-org-xsd-soapstruct_type_pkg.ads
+soapinterop-org-xsd.ads
+soapinterop-org.ads
+soapinterop.ads
 sock1
 sock1.res
 sock1.tmp
@@ -569,6 +592,57 @@ upload3.res
 upload3.tmp
 upload4.res
 upload5.res
+urn-aws-anytype-set_of_int_type_pkg.ads
+urn-aws-anytype-set_of_x_type_pkg.ads
+urn-aws-anytype.ads
+urn-aws-wsdl4-color_type_pkg.adb
+urn-aws-wsdl4-color_type_pkg.ads
+urn-aws-wsdl4-complex_rec_type_pkg.adb
+urn-aws-wsdl4-complex_rec_type_pkg.ads
+urn-aws-wsdl4-new_rec_type_pkg.adb
+urn-aws-wsdl4-new_rec_type_pkg.ads
+urn-aws-wsdl4-rec_type_pkg.adb
+urn-aws-wsdl4-rec_type_pkg.ads
+urn-aws-wsdl4-set_of_int_type_pkg.ads
+urn-aws-wsdl4-set_of_rec_type_pkg.ads
+urn-aws-wsdl4.ads
+urn-aws.ads
+urn-datafeed-dukascopy-com-arrayofcandle_type_pkg.ads
+urn-datafeed-dukascopy-com-arrayofstock_type_pkg.ads
+urn-datafeed-dukascopy-com-candle_type_pkg.adb
+urn-datafeed-dukascopy-com-candle_type_pkg.ads
+urn-datafeed-dukascopy-com-stock_type_pkg.adb
+urn-datafeed-dukascopy-com-stock_type_pkg.ads
+urn-datafeed-dukascopy-com.ads
+urn-datafeed-dukascopy.ads
+urn-datafeed.ads
+urn-google_search-directory_category_array_type_pkg.ads
+urn-google_search-directory_category_type_pkg.adb
+urn-google_search-directory_category_type_pkg.ads
+urn-google_search-directorycategory_type_pkg.adb
+urn-google_search-directorycategory_type_pkg.ads
+urn-google_search-directorycategoryarray_type_pkg.ads
+urn-google_search-google_search_result_type_pkg.adb
+urn-google_search-google_search_result_type_pkg.ads
+urn-google_search-googlesearchresult_type_pkg.adb
+urn-google_search-googlesearchresult_type_pkg.ads
+urn-google_search-result_element_array_type_pkg.ads
+urn-google_search-result_element_type_pkg.adb
+urn-google_search-result_element_type_pkg.ads
+urn-google_search-resultelement_type_pkg.adb
+urn-google_search-resultelement_type_pkg.ads
+urn-google_search-resultelementarray_type_pkg.ads
+urn-google_search.ads
+urn-googlesearch-directorycategory_type_pkg.adb
+urn-googlesearch-directorycategory_type_pkg.ads
+urn-googlesearch-directorycategoryarray_type_pkg.ads
+urn-googlesearch-googlesearchresult_type_pkg.adb
+urn-googlesearch-googlesearchresult_type_pkg.ads
+urn-googlesearch-resultelement_type_pkg.adb
+urn-googlesearch-resultelement_type_pkg.ads
+urn-googlesearch-resultelementarray_type_pkg.ads
+urn-googlesearch.ads
+urn.ads
 wait
 wait.res
 wait2.res
