--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -425,6 +425,41 @@ soap4.res
 soap5.res
 soap6.res
 soap7.res
+soapaws-wsdl_2_def-complex_type_pkg.adb
+soapaws-wsdl_2_def-complex_type_pkg.ads
+soapaws-wsdl_2_def-ext_record_type_pkg.adb
+soapaws-wsdl_2_def-ext_record_type_pkg.ads
+soapaws-wsdl_2_def-table_type_pkg.ads
+soapaws-wsdl_2_def.ads
+soapaws-wsdl_3_def-rec1_type_pkg.adb
+soapaws-wsdl_3_def-rec1_type_pkg.ads
+soapaws-wsdl_3_def-rec2_type_pkg.adb
+soapaws-wsdl_3_def-rec2_type_pkg.ads
+soapaws-wsdl_3_def.ads
+soapaws-wsdl_4_def-my_float_type_pkg.ads
+soapaws-wsdl_4_def-my_int_type_pkg.ads
+soapaws-wsdl_4_def-rec_type_pkg.adb
+soapaws-wsdl_4_def-rec_type_pkg.ads
+soapaws-wsdl_4_def.ads
+soapaws-wsdl_5_def-color_type_pkg.adb
+soapaws-wsdl_5_def-color_type_pkg.ads
+soapaws-wsdl_5_def.ads
+soapaws-wsdl_6_def-color_type_pkg.adb
+soapaws-wsdl_6_def-color_type_pkg.ads
+soapaws-wsdl_6_def-complex_rec_type_pkg.adb
+soapaws-wsdl_6_def-complex_rec_type_pkg.ads
+soapaws-wsdl_6_def-new_rec_type_pkg.adb
+soapaws-wsdl_6_def-new_rec_type_pkg.ads
+soapaws-wsdl_6_def-rec_type_pkg.adb
+soapaws-wsdl_6_def-rec_type_pkg.ads
+soapaws-wsdl_6_def-set_of_int_type_pkg.ads
+soapaws-wsdl_6_def-set_of_rec_type_pkg.ads
+soapaws-wsdl_6_def.ads
+soapaws-wsdl_8_def-file_data_type_pkg.adb
+soapaws-wsdl_8_def-file_data_type_pkg.ads
+soapaws-wsdl_8_def-set_of_files_type_pkg.ads
+soapaws-wsdl_8_def.ads
+soapaws.ads
 soapinterop-org-xsd-arrayoffloat_type_pkg.ads
 soapinterop-org-xsd-arrayofint_type_pkg.ads
 soapinterop-org-xsd-arrayofsoapstruct_type_pkg.ads
