--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -441,9 +441,15 @@ soapaws-wsdl_4_def-my_int_type_pkg.ads
 soapaws-wsdl_4_def-rec_type_pkg.adb
 soapaws-wsdl_4_def-rec_type_pkg.ads
 soapaws-wsdl_4_def.ads
+soapaws-wsdl_4_pkg-my_float_type_pkg.ads
+soapaws-wsdl_4_pkg-my_int_type_pkg.ads
+soapaws-wsdl_4_pkg.ads
 soapaws-wsdl_5_def-color_type_pkg.adb
 soapaws-wsdl_5_def-color_type_pkg.ads
 soapaws-wsdl_5_def.ads
+soapaws-wsdl_5_pkg-color_type_pkg.adb
+soapaws-wsdl_5_pkg-color_type_pkg.ads
+soapaws-wsdl_5_pkg.ads
 soapaws-wsdl_6_def-color_type_pkg.adb
 soapaws-wsdl_6_def-color_type_pkg.ads
 soapaws-wsdl_6_def-complex_rec_type_pkg.adb
@@ -455,6 +461,9 @@ soapaws-wsdl_6_def-rec_type_pkg.ads
 soapaws-wsdl_6_def-set_of_int_type_pkg.ads
 soapaws-wsdl_6_def-set_of_rec_type_pkg.ads
 soapaws-wsdl_6_def.ads
+soapaws-wsdl_6_pkg-color_type_pkg.adb
+soapaws-wsdl_6_pkg-color_type_pkg.ads
+soapaws-wsdl_6_pkg.ads
 soapaws-wsdl_8_def-file_data_type_pkg.adb
 soapaws-wsdl_8_def-file_data_type_pkg.ads
 soapaws-wsdl_8_def-set_of_files_type_pkg.ads
