Update some entries.

--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -469,15 +469,6 @@ soapaws-wsdl_8_def-file_data_type_pkg.ads
 soapaws-wsdl_8_def-set_of_files_type_pkg.ads
 soapaws-wsdl_8_def.ads
 soapaws.ads
-soapinterop-org-xsd-arrayoffloat_type_pkg.ads
-soapinterop-org-xsd-arrayofint_type_pkg.ads
-soapinterop-org-xsd-arrayofsoapstruct_type_pkg.ads
-soapinterop-org-xsd-arrayofstring_type_pkg.ads
-soapinterop-org-xsd-soapstruct_type_pkg.adb
-soapinterop-org-xsd-soapstruct_type_pkg.ads
-soapinterop-org-xsd.ads
-soapinterop-org.ads
-soapinterop.ads
 sock1
 sock1.res
 sock1.tmp
@@ -525,6 +516,15 @@ strm.tmp
 strm2
 strm2.res
 strm2.tmp
+t_soapinterop-org-xsd-arrayoffloat_type_pkg.ads
+t_soapinterop-org-xsd-arrayofint_type_pkg.ads
+t_soapinterop-org-xsd-arrayofsoapstruct_type_pkg.ads
+t_soapinterop-org-xsd-arrayofstring_type_pkg.ads
+t_soapinterop-org-xsd-soapstruct_type_pkg.adb
+t_soapinterop-org-xsd-soapstruct_type_pkg.ads
+t_soapinterop-org-xsd.ads
+t_soapinterop-org.ads
+t_soapinterop.ads
 tclientto
 tclientto.res
 tclientto.tmp
