(aws_api.xml): Ensure that the gen_gps_ref executable is found in the current  directory. Fixes for DC23-002.

--- a/docs/makefile
+++ b/docs/makefile
@@ -86,7 +86,7 @@ ALL_API = $(sort $(shell ls ../src/*.ads ../xsrc/*.ads ../soap/*.ads))
 force:
 
 aws_api.xml: prog force
-	gen_gps_ref $(ALL_API)
+	./gen_gps_ref $(ALL_API)
 
 aws_docs: aws_api.xml aws.ps aws.pdf aws.html aws.txt aws.info
 
