(APIFILES): Add aws-services-callbacks.ads.texi.

--- a/docs/makefile
+++ b/docs/makefile
@@ -51,6 +51,7 @@ APIFILES = ../src/aws.ads.texi \
 	../src/aws-server-status.ads.texi \
 	../src/aws-server-log.ads.texi \
 	../src/aws-server.ads.texi \
+	../src/aws-services-callbacks.ads.texi \
 	../src/aws-services-directory.ads.texi \
 	../src/aws-services-dispatchers-method.ads.texi \
 	../src/aws-services-dispatchers-uri.ads.texi \
