Handle the GNAT 5.03 case where ASIS comes with a project file.

--- a/makefile.conf
+++ b/makefile.conf
@@ -23,10 +23,19 @@ INSTALL	 = $(HOME)
 
 ##############################################################################
 # ASIS optional, needed if you want to build ada2wsdl tool. This tool can be
-# used to create a WSDL document from an Ada spec. ASIS must point to the
-# asis sources. Note that you also need to activate XMLADA above.
+# used to create a WSDL document from an Ada spec. ASIS values can be:
 #
-#ASIS	 = c:/opt/gnatpro/5.02a1/lib/asis
+# (not-set)   : ASIS is not installed.
+# Disabled    : ASIS is installed but you don't want to use it.
+# (directory) : Directory point to the asis directory (for older ASIS version
+#               having no project file)
+# Installed   : ASIS is installed and you want to used it and it comes with a
+#               project file (recent version) distributed starting with
+#               GNAT 5.03.
+#
+# If you activate ASIS you also need to activate XMLADA above.
+#
+#ASIS	 = Installed
 
 ##############################################################################
 # Adasockets, optional. AWS use GNAT.Sockets as the default socket package. If
