(OSLIB): New variable to select between the different OS support  implementations.

--- a/makefile.conf
+++ b/makefile.conf
@@ -65,6 +65,12 @@ SOCKET=std
 endif
 
 ##############################################################################
+# The OS_Lib implementation. There is three, one based on GNAT library, one
+# which is Win32 specific and one based on POSIX binding.
+# OSLIB = [GNAT/Win32/POSIX]
+OSLIB = GNAT
+
+##############################################################################
 # Whether AWS must use the integrated AI302 components or should use an
 # external copy of them. If External is set be sure to set ADA_PROJECT_PATH to
 # point to the AI302 project file.
