--- a/include/makefile
+++ b/include/makefile
@@ -5,14 +5,11 @@
 
 force:
 
-../src/aws-os_lib.adb:
-	$(CP) ../config/aws-os_lib__gnat.adb ../src/aws-os_lib.adb
-
 build_zlib: force
 	echo "Building libz.a (Zlib library)"
 	${MAKE} -C zlib
 
-build: build_zlib ../src/aws-os_lib.adb
+build: build_zlib
 	$(GNATMAKE) -Pinclude -XAWS_BUILD=${PRJ_BUILD} -XXMLADA=${PRJ_XMLADA}
 
 setup:
