--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -330,6 +330,12 @@ googlesearchservice.ads
 head
 head.res
 head.tmp
+hecateewebservicesclass-client.adb
+hecateewebservicesclass-client.ads
+hecateewebservicesclass-server.adb
+hecateewebservicesclass-server.ads
+hecateewebservicesclass-types.ads
+hecateewebservicesclass.ads
 hload.res
 hload_sec.res
 hostip
@@ -360,6 +366,21 @@ moved.tmp
 multiple
 multiple.res
 my_file_upload
+n81-n67-n51-n47-hecateewebservices-encodedtypes-arrayoft_track_type_pkg.ads
+n81-n67-n51-n47-hecateewebservices-encodedtypes-t_affiliation_type_pkg.adb
+n81-n67-n51-n47-hecateewebservices-encodedtypes-t_affiliation_type_pkg.ads
+n81-n67-n51-n47-hecateewebservices-encodedtypes-t_battle_dimension_type_pkg.adb
+n81-n67-n51-n47-hecateewebservices-encodedtypes-t_battle_dimension_type_pkg.ads
+n81-n67-n51-n47-hecateewebservices-encodedtypes-t_functionid_type_pkg.adb
+n81-n67-n51-n47-hecateewebservices-encodedtypes-t_functionid_type_pkg.ads
+n81-n67-n51-n47-hecateewebservices-encodedtypes-t_track_type_pkg.adb
+n81-n67-n51-n47-hecateewebservices-encodedtypes-t_track_type_pkg.ads
+n81-n67-n51-n47-hecateewebservices-encodedtypes.ads
+n81-n67-n51-n47-hecateewebservices.ads
+n81-n67-n51-n47.ads
+n81-n67-n51.ads
+n81-n67.ads
+n81.ads
 nbconn.res
 nbconn_sec.res
 no_param.res
