Add notes about IPv6 configuration variable.

--- a/makefile.conf
+++ b/makefile.conf
@@ -45,6 +45,12 @@ INSTALL	 = $(HOME)
 #ADASOCKETS = /opt/adasockets
 
 ##############################################################################
+# IPv6, optional. If you want to use IPv6 sockets just uncomment the IPv6
+# variable below. Don't use ADASOCKETS together with IPv6 option.
+#
+#IPv6 = true
+
+##############################################################################
 # POSIX optional, needed if you want to build AWS using the POSIX version of
 # AWS.OS_Lib.
 #
