Change call to check_config accordingly.

--- a/config/makefile
+++ b/config/makefile
@@ -21,7 +21,7 @@ setup: ../src/aws-translator-conversion.adb ../src/aws-os_lib-definitions.ads
 ../src/aws-os_lib-definitions.ads: makefile src/check_config.c
 	echo Setup OS specific definitions
 	$(GCC_FOR_HOST) -o check_config src/check_config.c
-	./check_config > ../src/aws-os_lib-definitions.ads
+	./check_config ../src/aws-os_lib-definitions.ads
 
 build:
 
