Remove support for AI302 as it is not used anymore. (STRIP): New variable for the strip tool.

--- a/makefile.conf
+++ b/makefile.conf
@@ -77,13 +77,6 @@ endif
 OSLIB = GNAT
 
 ##############################################################################
-# Whether AWS must use the integrated AI302 components or should use an
-# external copy of them. If External is set be sure to set ADA_PROJECT_PATH to
-# point to the AI302 project file.
-# AI302 = [Internal/External]
-AI302=Internal
-
-##############################################################################
 # AWS provides a binding to the LDAP API. This binding will use the standard
 # LDAP DLL provided with Windows OS. On GNU/Linux you need to install OpenLDAP
 # if it is not already installed. If LDAP is installed on your system you can
@@ -119,7 +112,7 @@ GNATMAKE	  = gnatmake
 GNATMAKE_FOR_HOST = gnatmake
 GREP		  = grep
 GZIP	 	  = gzip
-MKDIR	 	  = mkdir
+MKDIR	 	  = mkdir -p
 MV	 	  = mv
 RM	 	  = rm
 SED	 	  = sed
@@ -127,3 +120,4 @@ TAR	 	  = tar
 WINDRES	 	  = windres
 CAT		  = cat
 TOUCH		  = touch
+STRIP		  = strip
