--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -453,11 +453,20 @@ soapaws-wsdl_2_def-ext_record_type_pkg.adb
 soapaws-wsdl_2_def-ext_record_type_pkg.ads
 soapaws-wsdl_2_def-table_type_pkg.ads
 soapaws-wsdl_2_def.ads
+soapaws-wsdl_2_pkg-complex_type_pkg.adb
+soapaws-wsdl_2_pkg-complex_type_pkg.ads
+soapaws-wsdl_2_pkg-table_type_pkg.ads
+soapaws-wsdl_2_pkg.ads
 soapaws-wsdl_3_def-rec1_type_pkg.adb
 soapaws-wsdl_3_def-rec1_type_pkg.ads
 soapaws-wsdl_3_def-rec2_type_pkg.adb
 soapaws-wsdl_3_def-rec2_type_pkg.ads
 soapaws-wsdl_3_def.ads
+soapaws-wsdl_3_pkg-rec1_type_pkg.adb
+soapaws-wsdl_3_pkg-rec1_type_pkg.ads
+soapaws-wsdl_3_pkg-rec2_type_pkg.adb
+soapaws-wsdl_3_pkg-rec2_type_pkg.ads
+soapaws-wsdl_3_pkg.ads
 soapaws-wsdl_4_def-my_float_type_pkg.ads
 soapaws-wsdl_4_def-my_int_type_pkg.ads
 soapaws-wsdl_4_def-rec_type_pkg.adb
@@ -465,6 +474,8 @@ soapaws-wsdl_4_def-rec_type_pkg.ads
 soapaws-wsdl_4_def.ads
 soapaws-wsdl_4_pkg-my_float_type_pkg.ads
 soapaws-wsdl_4_pkg-my_int_type_pkg.ads
+soapaws-wsdl_4_pkg-rec_type_pkg.adb
+soapaws-wsdl_4_pkg-rec_type_pkg.ads
 soapaws-wsdl_4_pkg.ads
 soapaws-wsdl_5_def-color_type_pkg.adb
 soapaws-wsdl_5_def-color_type_pkg.ads
@@ -498,6 +509,10 @@ soapaws-wsdl_8_def-file_data_type_pkg.adb
 soapaws-wsdl_8_def-file_data_type_pkg.ads
 soapaws-wsdl_8_def-set_of_files_type_pkg.ads
 soapaws-wsdl_8_def.ads
+soapaws-wsdl_8_pkg-file_data_type_pkg.adb
+soapaws-wsdl_8_pkg-file_data_type_pkg.ads
+soapaws-wsdl_8_pkg-set_of_files_type_pkg.ads
+soapaws-wsdl_8_pkg.ads
 soapaws.ads
 sock1
 sock1.res
