(XMLADA): Add some comment about the ADA_PROJECT_PATH. (ASIS): Clean-up the configuration options. It is now as for XML/Ada, either  not set or set to true. We do not support ASIS without a project file.

--- a/makefile.conf
+++ b/makefile.conf
@@ -16,25 +16,20 @@ INSTALL	 = $(HOME)
 ##############################################################################
 # XMLADA optional, needed if you want to build SOAP's AWS support. Uncomment
 # line above to activate XML/Ada support, you must also set ADA_PROJECT_PATH
-# to point to the XML/Ada project files.
+# to point to the XML/Ada project files if not installed in the standard
+# location.
 #
 #XMLADA	= true
 
 ##############################################################################
 # ASIS optional, needed if you want to build ada2wsdl tool. This tool can be
-# used to create a WSDL document from an Ada spec. ASIS values can be:
-#
-# (not-set)   : ASIS is not installed.
-# Disabled    : ASIS is installed but you don't want to use it.
-# (directory) : Directory point to the asis directory (for older ASIS version
-#               having no project file)
-# Installed   : ASIS is installed and you want to used it and it comes with a
-#               project file (recent version) distributed starting with
-#               GNAT 5.03.
+# used to create a WSDL document from an Ada spec. Uncomment line above to
+# activate ASIS support. you must also set ADA_PROJECT_PATH to point to the
+# ASIS project files if not installed in the standard location.
 #
 # If you activate ASIS you also need to activate XMLADA above.
 #
-#ASIS	 = Installed
+#ASIS	= true
 
 ##############################################################################
 # Adasockets, optional. AWS use GNAT.Sockets as the default socket package. If
