(I_WEL): Change value to point to the install right directory. Work for E923-010.

--- a/web_elements/makefile
+++ b/web_elements/makefile
@@ -3,7 +3,7 @@
 
 DIRS = menu_css notebook rounded_boxes icons javascripts
 
-I_WEL	= $(INSTALL)/share/aws/web_elements
+I_WEL	= $(INSTALL)/share/examples/aws/web_elements
 
 init:
 	$(MKDIR) -p $(I_WEL)
