--- a/makefile.conf
+++ b/makefile.conf
@@ -71,6 +71,13 @@ endif
 OSLIB = GNAT
 
 ##############################################################################
+# Whether AWS must use the integrated AI302 components or should use an
+# external copy of them. If External is set be sure to set ADA_PROJECT_PATH to
+# point to the AI302 project file.
+# AI302 = [Internal/External]
+AI302=Internal
+
+##############################################################################
 # AWS provides a binding to the LDAP API. This binding will use the standard
 # LDAP DLL provided with Windows OS. On GNU/Linux you need to install OpenLDAP
 # if it is not already installed. If LDAP is installed on your system you can
